# deepin-diskmanager

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  deepin-diskmanager.pro
application/: CMakeLists.txt  application.pro  common.cpp  common.h  cusapplication.cpp  cusapplication.h  icons.qrc  main.cpp  resource.qrc
application/.tx/: .config.swp  config  ts2desktop
application/assets/: appicons.qrc  deepin-diskmanager.desktop  icons.qrc
application/icons/: deepin-diskmanager.desktop
application/partedproxy/: dmdbushandler.cpp  dmdbushandler.h  dmdbusinterface.cpp  dmdbusinterface.h  partedproxy.pri
application/translations/: deepin-diskmanager.ts  deepin-diskmanager_ady.ts  deepin-diskmanager_af.ts  deepin-diskmanager_am_ET.ts  deepin-diskmanager_ar.ts  deepin-diskmanager_ast.ts  deepin-diskmanager_az.ts  deepin-diskmanager_bg.ts  deepin-diskmanager_bn.ts  deepin-diskmanager_bo.ts  deepin-diskmanager_bqi.ts  deepin-diskmanager_br.ts  deepin-diskmanager_ca.ts  deepin-diskmanager_cs.ts  deepin-diskmanager_da.ts  deepin-diskmanager_de.ts  deepin-diskmanager_el.ts  deepin-diskmanager_en_AU.ts  deepin-diskmanager_en_US.ts  deepin-diskmanager_eo.ts  deepin-diskmanager_es.ts  deepin-diskmanager_et.ts  deepin-diskmanager_eu.ts  deepin-diskmanager_fa.ts  deepin-diskmanager_fi.ts  deepin-diskmanager_fil.ts  deepin-diskmanager_fr.ts  deepin-diskmanager_gl_ES.ts  deepin-diskmanager_he.ts  deepin-diskmanager_hi_IN.ts  deepin-diskmanager_hr.ts  deepin-diskmanager_hu.ts  deepin-diskmanager_hy.ts  deepin-diskmanager_id.ts  deepin-diskmanager_it.ts  deepin-diskmanager_ja.ts  deepin-diskmanager_ka.ts  deepin-diskmanager_km_KH.ts  deepin-diskmanager_kn_IN.ts  deepin-diskmanager_ko.ts  (+38 more)
application/translations/desktop/: desktop.ts  desktop_ady.ts  desktop_af.ts  desktop_am_ET.ts  desktop_ar.ts  desktop_ast.ts  desktop_az.ts  desktop_bg.ts  desktop_bn.ts  desktop_bo.ts  desktop_bqi.ts  desktop_br.ts  desktop_ca.ts  desktop_cs.ts  desktop_da.ts  desktop_de.ts  desktop_el.ts  desktop_en_US.ts  desktop_eo.ts  desktop_es.ts  desktop_et.ts  desktop_eu.ts  desktop_fa.ts  desktop_fi.ts  desktop_fil.ts  desktop_fr.ts  desktop_gl_ES.ts  desktop_he.ts  desktop_hi_IN.ts  desktop_hr.ts  desktop_hu.ts  desktop_hy.ts  desktop_id.ts  desktop_it.ts  desktop_ja.ts  desktop_ka.ts  desktop_km_KH.ts  desktop_kn_IN.ts  desktop_ko.ts  desktop_ku.ts  (+37 more)
application/translations/policy/: policy.ts  policy_ady.ts  policy_af.ts  policy_am_ET.ts  policy_ar.ts  policy_ast.ts  policy_az.ts  policy_bg.ts  policy_bn.ts  policy_bo.ts  policy_bqi.ts  policy_br.ts  policy_ca.ts  policy_cs.ts  policy_da.ts  policy_de.ts  policy_el.ts  policy_en_US.ts  policy_eo.ts  policy_es.ts  policy_et.ts  policy_eu.ts  policy_fa.ts  policy_fi.ts  policy_fil.ts  policy_fr.ts  policy_gl_ES.ts  policy_he.ts  policy_hi_IN.ts  policy_hr.ts  policy_hu.ts  policy_hy.ts  policy_id.ts  policy_it.ts  policy_ja.ts  policy_ka.ts  policy_km_KH.ts  policy_kn_IN.ts  policy_ko.ts  policy_ku.ts  (+37 more)
application/translations/singlepolicy/: policy.ts
application/widgets/: animationdialog.cpp  animationdialog.h  centerwidget.cpp  centerwidget.h  createlvwidget.cpp  createlvwidget.h  createpartitiontabledialog.cpp  createpartitiontabledialog.h  createvgwidget.cpp  createvgwidget.h  cylinderinfowidget.cpp  cylinderinfowidget.h  cylinderwidget.cpp  cylinderwidget.h  decryptdialog.cpp  decryptdialog.h  deviceinfoparser.cpp  deviceinfoparser.h  devicelistwidget.cpp  devicelistwidget.h  diskbadsectorsdialog.cpp  diskbadsectorsdialog.h  diskhealthdetectiondelegate.cpp  diskhealthdetectiondelegate.h  diskhealthdetectiondialog.cpp  diskhealthdetectiondialog.h  diskhealthheaderview.cpp  diskhealthheaderview.h  diskinfodisplaydialog.cpp  diskinfodisplaydialog.h  diskstandarditemmodel.cpp  diskstandarditemmodel.h  formatedialog.cpp  formatedialog.h  infoshowwidget.cpp  infoshowwidget.h  mainsplitter.cpp  mainsplitter.h  mainwindow.cpp  mainwindow.h  (+28 more)
application/widgets/accessible/: accessiblewidget.cpp  accessiblewidget.h
application/widgets/customcontrol/: bufferwin.cpp  bufferwin.h  buttonlabel.cpp  buttonlabel.h  customcontrol.pri  ddbase.cpp  ddbase.h  dmdiskinfobox.cpp  dmdiskinfobox.h  dmframewidget.cpp  dmframewidget.h  dmtableview.cpp  dmtableview.h  dmtreemanagerwidget.cpp  dmtreemanagerwidget.h  dmtreeview.cpp  dmtreeview.h  dmtreeviewdelegate.cpp  dmtreeviewdelegate.h  infotopframe.cpp  infotopframe.h  myframe.cpp  myframe.h  partchartshowing.cpp  partchartshowing.h  partitioninfowidget.cpp  partitioninfowidget.h  partitionwidget.cpp  partitionwidget.cpp.autosave  partitionwidget.h  passwordinputdialog.cpp  passwordinputdialog.h  piechartwidget.cpp  piechartwidget.h  radiuswidget.cpp  radiuswidget.h  selecteditemwidget.cpp  selecteditemwidget.h  selectpvitemwidget.cpp  (+21 more)
basestruct/: CMakeLists.txt  basestruct.pro  commondef.h  deviceinfo.cpp  deviceinfo.h  dmcommonstruct.cpp  dmcommonstruct.h  luksenum.h  luksstruct.cpp  luksstruct.h  lvmenum.h  lvmstruct.cpp  lvmstruct.h  partitioninfo.cpp  partitioninfo.h  publicstruct.pri  utils.cpp  utils.h
service/: CMakeLists.txt  PolicyKitHelper.cpp  PolicyKitHelper.h  diskmanagerservice.cpp  diskmanagerservice.h  diskmanagerserviceprivate.cpp  diskmanagerserviceprivate.h  main.cpp  service.pro  watcher.cpp  watcher.h
service/data/: com.deepin.diskmanager.service  com.deepin.diskmanager.xml
service/diskoperation/: DeviceStorage.cpp  DeviceStorage.h  blockspecial.cpp  blockspecial.h  device.cpp  device.h  diskoperation.pri  fsinfo.cpp  fsinfo.h  gpt_header.h  mountinfo.cpp  mountinfo.h  partedcore.cpp  partedcore.h  partition.cpp  partition.h  partitionvector.cpp  partitionvector.h  procpartitionsinfo.cpp  procpartitionsinfo.h  sigtype.h  supportedfilesystems.cpp  supportedfilesystems.h  thread.cpp  thread.h
service/policy/: com.deepin.diskmanager.policy  com.deepin.pkexec.deepin-diskmanager.policy
service/polkit/: 99-diskmanager.rules
service/udev/: 99-diskmanager.rules  USBadd.sh  USBremove.sh  deepin-disk-manager  deepin-diskmanager-authenticateProxy  deepin-diskmanager-service-bin
(+68 files in other folders)
